[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nebby"]
include-package-data = true

[project]
name = "nebby"
version = "0.0.1"
description = 'Now you can nebby too'
readme = 'README.md'
requires-python = ">=3.10.9"
dependencies = [
    'click',
]

[project.scripts]
nebby = 'nebby.nebby:main'
